--- a/v0/index.html
+++ b/v0/index.html
@@ -92,30 +92,35 @@
     </div>
 
     <script>
-          const num1Input=document.getElementById("num1")
-          const num2Input=document.getElementById("num2")
-          const resulDisplay=document.getElementById("result")
+          const num1Input = document.getElementById("num1")
+          const num2Input = document.getElementById("num2")
+          const resultDisplay = document.getElementById("result")
+
           function performOperation(Operation){
             const num1 = parseFloat(num1Input.value)
-            const num2= parseFloat(num2Input.value)
+            const num2 = parseFloat(num2Input.value)
             let result;
             switch(Operation){
                 case "add":
-                    result=num1+num2
+                    result = num1 + num2
                     break
                 case "sub":
-                    result=num1-num2
+                    result = num1 - num2
                     break
                 case "mul":
-                    result=num1*num2
+                    result = num1 * num2
                     break
-                case "div":  
-                     result=num1/num2 
-                     break   
+                case "div":
+                    result = num1/num2
+                    break
                 default:
-                    reult="Invalid"  
-                    console.log("invalid operation")
-                    break   
+                    result = "Invalid"
+                    console.log("Invalid Operation")
+                    break
+
+            }
+            resultDisplay.innerHTML = "<span style='font-size:1.5rem;'>Result: " + result + "</span>";
+          }
     </script>
 </body>
 </html>
